[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/PlantIndex/PlantIndex.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://src/PlantIndex/IndexEntry/IndexEntry.tscn" type="PackedScene" id=3]

[node name="PlantIndex" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -250.0
margin_right = 384.0
margin_bottom = 250.0
script = ExtResource( 1 )

[node name="TweenClose" type="Tween" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 761.0
margin_bottom = 493.0

[node name="HBoxContainerTop" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 754.0
margin_bottom = 64.0
alignment = 2

[node name="CloseButton" type="TextureButton" parent="VBoxContainer/HBoxContainerTop"]
margin_left = 690.0
margin_right = 754.0
margin_bottom = 64.0
size_flags_horizontal = 9
texture_normal = ExtResource( 2 )

[node name="HBoxContainerMid" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 754.0
margin_bottom = 296.0
size_flags_vertical = 3

[node name="Page1" parent="VBoxContainer/HBoxContainerMid" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 268.0
margin_bottom = 228.0

[node name="Page2" parent="VBoxContainer/HBoxContainerMid" instance=ExtResource( 3 )]
margin_left = 486.0
margin_top = 0.0
margin_right = 754.0
margin_bottom = 228.0
size_flags_horizontal = 10

[node name="HBoxContainerBot" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 422.0
margin_right = 754.0
margin_bottom = 486.0
size_flags_horizontal = 11
size_flags_vertical = 10

[node name="BackButton" type="TextureButton" parent="VBoxContainer/HBoxContainerBot"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 2 )

[node name="NextButton" type="TextureButton" parent="VBoxContainer/HBoxContainerBot"]
margin_left = 690.0
margin_right = 754.0
margin_bottom = 64.0
size_flags_horizontal = 10
texture_normal = ExtResource( 2 )

[connection signal="tween_all_completed" from="TweenClose" to="." method="_on_TweenClose_tween_all_completed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainerTop/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainerBot/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainerBot/NextButton" to="." method="_on_NextButton_pressed"]
